--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <div id="clock-container">
+        <div id="clock"></div>
+    </div>
 
     <script src="index.js"></script>
 </body>
