--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch</title>
-    <link rel="stylesheet" href="styles.css">
 
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Stopwatch</h1>
+    <div id="container">
+        <div id="timer">00:00:00:00</div>
+        <div id="button-container">
+            <button id="start-button">Start</button>
+            <button id="stop-button">Stop</button>
+            <button id="reset-button">Reset</button>
+        </div>
+    </div>
+
     <script src="index.js"></script>
 </body>
 </html>
