--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -10,11 +10,11 @@
 <body>
     <h1>Stopwatch</h1>
     <div id="container">
-        <div id="timer">00:00:00:00</div>
+        <div id="display">00:00:00:00</div>
         <div id="button-container">
-            <button id="start-button">Start</button>
-            <button id="stop-button">Stop</button>
-            <button id="reset-button">Reset</button>
+            <button id="start-button" onclick="start()">Start</button>
+            <button id="stop-button" onclick="stop()">Stop</button>
+            <button id="reset-button" onclick="reset()">Reset</button>
         </div>
     </div>
 
