--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice File</title>
 
-    <link rel="stylesheet" href="practice.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="container">
@@ -37,6 +37,6 @@
         </div>
     </div>
 
-    <script type="module" src="practice.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
