--- a/calculator/index.html
+++ b/calculator/index.html
@@ -11,24 +11,24 @@
     <div id="container">
         <input type="text" id="display" readonly placeholder="6.25">
         <div id="keys">
-            <button onclick="appendToDisplay()" class="operators" id="addition">+</button>
-            <button onclick="appendToDisplay()" class="numbers">7</button>
-            <button onclick="appendToDisplay()" class="numbers">8</button>
-            <button onclick="appendToDisplay()" class="numbers">9</button>
+            <button onclick="appendToDisplay('+')" class="operators" id="addition">+</button>
+            <button onclick="appendToDisplay('7')" class="numbers">7</button>
+            <button onclick="appendToDisplay('8')" class="numbers">8</button>
+            <button onclick="appendToDisplay('9')" class="numbers">9</button>
 
-            <button onclick="appendToDisplay()" class="operators" id="substraction">-</button>
-            <button onclick="appendToDisplay()" class="numbers">4</button>
-            <button onclick="appendToDisplay()" class="numbers">5</button>
-            <button onclick="appendToDisplay()" class="numbers">6</button>
+            <button onclick="appendToDisplay('-')" class="operators" id="substraction">-</button>
+            <button onclick="appendToDisplay('4')" class="numbers">4</button>
+            <button onclick="appendToDisplay('5')" class="numbers">5</button>
+            <button onclick="appendToDisplay('6')" class="numbers">6</button>
 
-            <button onclick="appendToDisplay()" class="operators" id="multiplication">*</button>
-            <button onclick="appendToDisplay()" class="numbers">1</button>
-            <button onclick="appendToDisplay()" class="numbers">2</button>
-            <button onclick="appendToDisplay()" class="numbers">3</button>
+            <button onclick="appendToDisplay('*')" class="operators" id="multiplication">*</button>
+            <button onclick="appendToDisplay('1')" class="numbers">1</button>
+            <button onclick="appendToDisplay('2')" class="numbers">2</button>
+            <button onclick="appendToDisplay('3')" class="numbers">3</button>
 
-            <button onclick="appendToDisplay()" class="operators" id="division">/</button>
-            <button onclick="appendToDisplay()" class="numbers">0</button>
-            <button onclick="appendToDisplay()" class="numbers">.</button>
+            <button onclick="appendToDisplay('/')" class="operators" id="division">/</button>
+            <button onclick="appendToDisplay('0')" class="numbers">0</button>
+            <button onclick="appendToDisplay('.')" class="numbers">.</button>
             <button onclick="calculate()" class="numbers">=</button>
 
             <button onclick="clearDisplay()" class="operators" id="clear">C</button>
