del: removed placeholder

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-        <input type="text" id="display" readonly placeholder="6.25">
+        <input type="text" id="display" readonly>
         <div id="keys">
             <button onclick="appendToDisplay('+')" class="operators" id="addition">+</button>
             <button onclick="appendToDisplay('7')" class="numbers">7</button>
