--- a/rock-paper-scissor/index.html
+++ b/rock-paper-scissor/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <h1>Rock - Paper - Scissor</h1>
-    <div id="choices-container">
-        <button onclick="playGame('rock')" class="choices">👊</button>
-        <button onclick="playGame('paper')" class="choices">✋</button>
-        <button onclick="playGame('scissor')" class="choices">✌️</button>
+    <div class="choices">
+        <button onclick="playGame('rock')">👊</button>
+        <button onclick="playGame('paper')">✋</button>
+        <button onclick="playGame('scissor')">✌️</button>
     </div>
     <div id="playerDisplay">PLAYER: </div>
     <div id="computerDisplay">Computer: </div>
