del: remove placeholder

--- a/rock-paper-scissor/index.html
+++ b/rock-paper-scissor/index.html
@@ -17,7 +17,7 @@
     </div>
     <div id="playerDisplay">PLAYER: </div>
     <div id="computerDisplay">Computer: </div>
-    <div id="result">IT'S A TIE!</div>
+    <div id="result"></div>
 
     <script src="index.js"></script>
 </body>
