--- a/rock-paper-scissor/index.html
+++ b/rock-paper-scissor/index.html
@@ -19,6 +19,13 @@
     <div id="computerDisplay">Computer: </div>
     <div id="result"></div>
 
+    <div class="scoreDisplay">
+        Player Score: <span id="playerScoreDisplay">0</span>
+    </div>
+    <div class="scoreDisplay">
+        Computer Score: <span id="computerScoreDisplay">0</span>
+    </div>
+
     <script src="index.js"></script>
 </body>
 </html>
