--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <form class="weatherForm">
+        <input type="text" class="cityInput" placeholder="Enter city">
+        <button type="submit">Get Weather</button>
+    </form>    
+
+    <div class="card">
+        <h1 class="cityDisplay">Miami</h1>
+        <p class="tempDisplay">90&#176;F</p>
+        <p class="humidityDisplay">Humidity: 75%</p>
+        <p class="descDisplay">Clear Skies</p>
+        <p class="weatherEmoji">🌤️</p>
+        <p class="errorDisplay">Please Enter a City</p>
+    </div>
 
     <script src="index.js"></script>
 </body>
