--- a/chrome-extension-lead-tracker/index.html
+++ b/chrome-extension-lead-tracker/index.html
@@ -10,7 +10,8 @@
 <body>
     <input type="text" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
+    <ul id="ul-el"></ul>
 
-    <script src="index.js"></script>
+    <script src="index.js"></script><br>
 </body>
 </html>
