--- a/chrome-extension-lead-tracker/index.html
+++ b/chrome-extension-lead-tracker/index.html
@@ -10,6 +10,7 @@
 <body>
     <input type="text" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
+    <button id="save-btn">SAVE TAB</button>
     <button id="clear-btn">CLEAR INPUT</button>
     <ul id="ul-el"></ul>
 
